--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-*, *::before, *::after {
+
+
+ *::before, *::after {
     box-sizing: border-box;
     font-family: Gotham Rounded, sans-serif;
     font-weight: normal;
@@ -7,8 +9,12 @@
   body {
     padding: 0;
     margin: 0;
-    background: rgb(77,205,105);
-    background: linear-gradient(72deg, rgba(77,205,105,1) 33%, rgba(215,251,63,1) 57%);
+    /* background: rgb(77,205,105); */
+	background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+    @import url('https://fonts.googleapis.com/css?family=Roboto:300&display=swap');
+
+
   }
   
   .calculator-grid {
@@ -60,5 +66,4 @@
     color: white;
     font-size: 2.5rem;
   }
-
 
